--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
 
     <div class="card">
       <p>
-        Email: <strong>support@ledgerhaul.com</strong>
+        Email: <strong>info@ledgerhaul.com</strong>
       </p>
     </div>
   </main>
