--- a/privacy.html
+++ b/privacy.html
@@ -16,7 +16,7 @@
 <body>
   <main class="wrap">
     <h1>Privacy Policy</h1>
-    <p>Last updated: <strong>Today</strong></p>
+    <p>Last updated: <strong>January 1, 2026</strong></p>
 
     <p>LedgerHaul respects your privacy. This policy explains how information is collected, used, and protected when you use our services.</p>
 
