--- a/pricing.html
+++ b/pricing.html
@@ -4,9 +4,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Pricing | LedgerHaul</title>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
   <style>
     :root{
       --green:#0F766E;
@@ -28,61 +30,93 @@
     }
     a{text-decoration:none;color:inherit}
     .wrap{max-width:var(--max);margin:0 auto;padding:0 20px}
-    header{border-bottom:1px solid var(--border)}
-    header .wrap{display:flex;align-items:center;height:72px;font-weight:700}
+
+    header{
+      border-bottom:1px solid var(--border);
+      background:#fff;
+    }
+    header .wrap{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      height:72px;
+      font-weight:700;
+    }
+    nav{
+      display:flex;
+      gap:18px;
+      font-weight:500;
+    }
+    nav a{color:var(--muted)}
+    nav a:hover{color:var(--text)}
+
     main{padding:72px 0}
     h1{font-size:36px;margin:0 0 14px;letter-spacing:-.02em}
     p{margin:0;color:var(--muted);max-width:72ch}
+
     .card{
       margin-top:32px;
       border:1px solid var(--border);
       border-radius:var(--radius);
       padding:32px;
       background:var(--bg-alt);
+      max-width:720px;
     }
-    .cta{
-      margin-top:24px;
-    }
+
     .btn{
       display:inline-block;
+      margin-top:24px;
       padding:12px 18px;
       border-radius:12px;
       font-weight:600;
       background:var(--green);
       color:#fff;
     }
-    footer{border-top:1px solid var(--border);padding:32px 0;color:var(--muted);font-size:14px}
+
+    footer{
+      border-top:1px solid var(--border);
+      padding:32px 0;
+      color:var(--muted);
+      font-size:14px;
+    }
   </style>
 </head>
 
 <body>
-  <header>
-    <div class="wrap">LedgerHaul</div>
-  </header>
 
-  <main class="wrap">
-    <h1>Pricing</h1>
+<header>
+  <div class="wrap">
+    <a href="./index.html">LedgerHaul</a>
+    <nav>
+      <a href="./product.html">Product</a>
+      <a href="./pricing.html">Pricing</a>
+      <a href="./contact.html">Contact</a>
+    </nav>
+  </div>
+</header>
+
+<main class="wrap">
+  <h1>Pricing</h1>
+  <p>
+    Pricing is structured to scale with your team. Final pricing details are
+    provided during setup or by contacting sales.
+  </p>
+
+  <div class="card">
     <p>
-      Pricing is structured to scale with your team. Final pricing details are
-      provided during setup or by contacting sales.
+      LedgerHaul offers flexible plans designed to support payroll,
+      settlements, and billing as your business grows.
     </p>
 
-    <div class="card">
-      <p>
-        LedgerHaul offers flexible plans designed to support payroll,
-        settlements, and billing as your business grows.
-      </p>
+    <a class="btn" href="./contact.html">Contact Sales</a>
+  </div>
+</main>
 
-      <div class="cta">
-        <a class="btn" href="./contact.html">Contact Sales</a>
-      </div>
-    </div>
-  </main>
+<footer>
+  <div class="wrap">
+    © LedgerHaul. All rights reserved.
+  </div>
+</footer>
 
-  <footer>
-    <div class="wrap">
-      © LedgerHaul. All rights reserved.
-    </div>
-  </footer>
 </body>
 </html>
